--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
 	},
 	"keywords": [
 		"waste-walking",
-		"hochschule reutlingen",
-		"reutlingen university"
+		"oedp"
 	],
 	"license": "MIT",
 	"engines": {
